# gcp-terraform-generator-v2

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: migration_handler.rs  mod.rs  terraform_handler.rs
backend/src/models/: bigquery.rs  credentials.rs  mod.rs  pubsub.rs  resources.rs  response.rs
backend/src/services/: command_executor.rs  constants.rs  formatters.rs  gcp_service.rs  mod.rs  terraform_service.rs  transformers.rs
backend/src/utils/: file_utils.rs  mod.rs
backend/terraform_files/app-springboot-project/: bigquery.tf  cloud_run.tf  functions.tf  networks.tf  provider.tf  pubsub_subscriptions.tf  pubsub_topics.tf  storage.tf  variables.tf
frontend/: package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BigQueryDatasetsListProps.tsx  CloudFunctionsList.tsx  CloudRunsList.tsx  CodePreview.tsx  CredentialsPreview.tsx  DestinationCredentialsModal.tsx  FileUpload.tsx  PubSubSubscriptionsList.tsx  PubSubTopicsListProps.tsx  StorageBucketsList.tsx  TerraformCodePreview.tsx  VPCList.tsx
frontend/src/types/: index.ts
