[package]
name = "gcp-terraform"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.76"
tokio = { version = "1.15.0", features = ["full"] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0"
futures = "0.3"
gcloud-sdk = "0.26.1"
tokio-util = "0.7"
hyper = "1.5.2"
base64 = "0.22.1"